--- a/IOS-combine/Modules/Contact/Cell/ContactCell.xib
+++ b/IOS-combine/Modules/Contact/Cell/ContactCell.xib
@@ -1,21 +1,79 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ContactCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="73" id="cKX-Zg-3Vm" customClass="ContactCell" customModule="IOS_combine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cKX-Zg-3Vm" id="evV-f9-rk1">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="F4z-mD-i6e">
+                        <rect key="frame" x="16" y="12" width="133" height="24"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="User" translatesAutoresizingMaskIntoConstraints="NO" id="lac-Lm-WIZ">
+                                <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jason Bailey" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otg-Eq-63I">
+                                <rect key="frame" x="38" y="0.0" width="95" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ar-Jv-hbA">
+                        <rect key="frame" x="274" y="9" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="SuF-19-jhL"/>
+                            <constraint firstAttribute="width" constant="30" id="xjj-Nh-reg"/>
+                        </constraints>
+                        <state key="normal" image="message-circle"/>
+                        <connections>
+                            <action selector="didTapChat:" destination="cKX-Zg-3Vm" eventType="touchUpInside" id="eKB-gN-THW"/>
+                        </connections>
+                    </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yCh-wG-K3b">
+                        <rect key="frame" x="16" y="52" width="288" height="1"/>
+                        <color key="backgroundColor" name="AppDarkGreenColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="ggf-ex-7PT"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="wqK-zN-zrz"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="9ar-Jv-hbA" firstAttribute="trailing" secondItem="yCh-wG-K3b" secondAttribute="trailing" id="IWa-GZ-ibG"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="yCh-wG-K3b" secondAttribute="bottom" priority="250" constant="23" id="MOy-SC-RDq"/>
+                    <constraint firstItem="yCh-wG-K3b" firstAttribute="centerX" secondItem="evV-f9-rk1" secondAttribute="centerX" id="VRI-3e-gul"/>
+                    <constraint firstItem="yCh-wG-K3b" firstAttribute="leading" secondItem="evV-f9-rk1" secondAttribute="leading" constant="16" id="XIM-2F-yKb"/>
+                    <constraint firstItem="F4z-mD-i6e" firstAttribute="top" secondItem="evV-f9-rk1" secondAttribute="top" constant="12" id="mVI-f4-OTk"/>
+                    <constraint firstItem="9ar-Jv-hbA" firstAttribute="centerY" secondItem="F4z-mD-i6e" secondAttribute="centerY" id="op6-Ou-vm8"/>
+                    <constraint firstItem="F4z-mD-i6e" firstAttribute="leading" secondItem="evV-f9-rk1" secondAttribute="leading" constant="16" id="uOU-6s-FED"/>
+                    <constraint firstItem="yCh-wG-K3b" firstAttribute="top" secondItem="F4z-mD-i6e" secondAttribute="bottom" constant="16" id="wM3-qV-CnY"/>
+                </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <viewLayoutGuide key="safeArea" id="zQv-c7-TWL"/>
+            <connections>
+                <outlet property="userName" destination="otg-Eq-63I" id="Foa-4F-eWd"/>
+            </connections>
+            <point key="canvasLocation" x="40.579710144927539" y="65.959821428571431"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="User" width="24" height="24"/>
+        <image name="message-circle" width="26.5" height="29"/>
+        <namedColor name="AppDarkGreenColor">
+            <color red="0.396078431372549" green="0.60784313725490191" blue="0.56862745098039214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
