--- a/IOS-combine/Modules/Calling/Xib/GroupCallingView.xib
+++ b/IOS-combine/Modules/Calling/Xib/GroupCallingView.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="GroupCallingView" customModule="Many_to_many_call" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="GroupCallingView" customModule="IOS_combine" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -81,7 +81,7 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EP6-uA-Ulc">
                             <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                            <state key="normal" image="StopVideo"/>
+                            <state key="normal" image="stopvideo"/>
                             <state key="selected" image="video"/>
                             <connections>
                                 <action selector="didTapVideo:" destination="iN0-l3-epB" eventType="touchUpInside" id="zf1-0P-1hv"/>
@@ -184,13 +184,13 @@
         </panGestureRecognizer>
     </objects>
     <resources>
-        <image name="StopVideo" width="60" height="60"/>
         <image name="Volume Off" width="32" height="32"/>
         <image name="Volumn On" width="32" height="32"/>
         <image name="end" width="60" height="60"/>
         <image name="mute" width="60" height="60"/>
         <image name="noun" width="100" height="100"/>
         <image name="noun_Switch" width="32" height="32"/>
+        <image name="stopvideo" width="60" height="60"/>
         <image name="unMute" width="60" height="60"/>
         <image name="video" width="60" height="60"/>
         <systemColor name="systemGray5Color">
