--- a/IOS-combine/Modules/Calling/Xib/GroupCallingView.xib
+++ b/IOS-combine/Modules/Calling/Xib/GroupCallingView.xib
@@ -134,7 +134,7 @@
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7LF-yi-hrj">
                     <rect key="frame" x="280" y="550" width="134" height="200"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" systemColor="systemGreenColor"/>
                     <connections>
                         <outletCollection property="gestureRecognizers" destination="mwB-MS-XSz" appends="YES" id="0lE-0B-VqL"/>
                     </connections>
@@ -195,6 +195,9 @@
         <image name="video" width="60" height="60"/>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
