--- a/IOS-combine/Modules/Calling/Xib/BroadcastView.xib
+++ b/IOS-combine/Modules/Calling/Xib/BroadcastView.xib
@@ -123,7 +123,7 @@
                     <rect key="frame" x="22" y="774" width="370" height="60"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gxb-br-vlQ">
-                            <rect key="frame" x="0.0" y="0.0" width="58" height="60"/>
+                            <rect key="frame" x="0.0" y="0.0" width="45" height="60"/>
                             <state key="normal" image="screenshare"/>
                             <state key="selected" image="ssoff"/>
                             <connections>
@@ -131,7 +131,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uNx-We-R0D">
-                            <rect key="frame" x="78" y="0.0" width="58" height="60"/>
+                            <rect key="frame" x="65" y="0.0" width="45" height="60"/>
                             <state key="normal" image="StopVideo"/>
                             <state key="selected" image="pause-video"/>
                             <connections>
@@ -139,14 +139,14 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e5C-GM-m0J">
-                            <rect key="frame" x="156" y="0.0" width="58" height="60"/>
+                            <rect key="frame" x="130" y="0.0" width="45" height="60"/>
                             <state key="normal" image="end"/>
                             <connections>
                                 <action selector="didTapHangup:" destination="iN0-l3-epB" eventType="touchUpInside" id="GsU-q0-7ur"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z81-QJ-C5D">
-                            <rect key="frame" x="234" y="0.0" width="58" height="60"/>
+                            <rect key="frame" x="195" y="0.0" width="45" height="60"/>
                             <state key="normal" image="appaudioon"/>
                             <state key="selected" image="appaudio"/>
                             <connections>
@@ -154,11 +154,18 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vEl-9G-EFc">
-                            <rect key="frame" x="312" y="0.0" width="58" height="60"/>
+                            <rect key="frame" x="260" y="0.0" width="45" height="60"/>
                             <state key="normal" image="mute"/>
                             <state key="selected" image="unMute"/>
                             <connections>
                                 <action selector="didTapMute:" destination="iN0-l3-epB" eventType="touchUpInside" id="2ft-pQ-g9u"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xV2-sT-sZr">
+                            <rect key="frame" x="325" y="0.0" width="45" height="60"/>
+                            <state key="normal" image="message-icon"/>
+                            <connections>
+                                <action selector="didTapBack:" destination="iN0-l3-epB" eventType="touchUpInside" id="Cz9-y8-ZG0"/>
                             </connections>
                         </button>
                     </subviews>
@@ -215,6 +222,7 @@
         <image name="audioRoute" width="512" height="512"/>
         <image name="broadcast" width="87" height="109"/>
         <image name="end" width="60" height="60"/>
+        <image name="message-icon" width="45.5" height="45.5"/>
         <image name="mute" width="60" height="60"/>
         <image name="noun_Switch" width="32" height="32"/>
         <image name="pause-video" width="55" height="52"/>
