--- a/IOS-combine/Modules/Calling/Xib/GroupCallingUpdatedView.xib
+++ b/IOS-combine/Modules/Calling/Xib/GroupCallingUpdatedView.xib
@@ -27,15 +27,15 @@
                     </constraints>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="I87-8m-hme">
-                    <rect key="frame" x="182" y="184" width="50" height="100"/>
+                    <rect key="frame" x="182" y="195" width="50" height="100"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYW-Rj-WvQ">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYW-Rj-WvQ">
                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbY-1U-KrD">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbY-1U-KrD">
                             <rect key="frame" x="0.0" y="50" width="50" height="50"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
@@ -44,7 +44,7 @@
                     </subviews>
                 </stackView>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Uwm-xl-oEZ">
-                    <rect key="frame" x="0.0" y="44" width="414" height="128"/>
+                    <rect key="frame" x="0.0" y="117" width="414" height="128"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="128" id="55a-4i-sLg"/>
@@ -57,7 +57,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="atO-nL-8Pe">
-                    <rect key="frame" x="358" y="196" width="32" height="84"/>
+                    <rect key="frame" x="358" y="269" width="32" height="84"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7UX-Fq-ifd">
                             <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
@@ -69,6 +69,7 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xh7-nN-2ad">
                             <rect key="frame" x="0.0" y="52" width="32" height="32"/>
                             <state key="normal" image="Volumn On"/>
+                            <state key="selected" image="Volume Off"/>
                             <connections>
                                 <action selector="didTapSpeaker:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="Ode-yu-qoc"/>
                             </connections>
@@ -79,35 +80,60 @@
                     <rect key="frame" x="0.0" y="802" width="414" height="60"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z6b-pa-cTX">
-                            <rect key="frame" x="0.0" y="0.0" width="93" height="60"/>
+                            <rect key="frame" x="0.0" y="0.0" width="128.5" height="60"/>
                             <state key="normal" image="stopvideo"/>
+                            <state key="selected" image="video"/>
                             <connections>
                                 <action selector="didTapVideo:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="LNs-Cq-59z"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XbX-Hg-sz4">
-                            <rect key="frame" x="107" y="0.0" width="93" height="60"/>
+                            <rect key="frame" x="142.5" y="0.0" width="129" height="60"/>
                             <state key="normal" image="end"/>
                             <connections>
                                 <action selector="didTapHangup:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="WNC-bd-iAt"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ygx-0w-WsE">
-                            <rect key="frame" x="214" y="0.0" width="93" height="60"/>
+                            <rect key="frame" x="285.5" y="0.0" width="128.5" height="60"/>
                             <state key="normal" image="mute"/>
+                            <state key="selected" image="unMute"/>
                             <connections>
                                 <action selector="didTapMute:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="pjg-RA-Rge"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qvl-lp-9FW">
-                            <rect key="frame" x="321" y="0.0" width="93" height="60"/>
-                            <state key="normal" image="message-icon"/>
-                            <connections>
-                                <action selector="didTapChat:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="ZzC-lQ-m8k"/>
-                            </connections>
-                        </button>
                     </subviews>
                 </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="J2H-9O-12D">
+                    <rect key="frame" x="56.5" y="56" width="196.5" height="49"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are video calling with " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAr-Vs-nPM">
+                            <rect key="frame" x="0.0" y="0.0" width="196.5" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" name="AppDarkGrey"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L5z-Po-KXn">
+                            <rect key="frame" x="0.0" y="28.5" width="196.5" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mk5-lE-iL0">
+                    <rect key="frame" x="390" y="64" width="0.0" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" name="AppDarkGrey"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="elf-R6-Eg3">
+                    <rect key="frame" x="20" y="67" width="24.5" height="27"/>
+                    <state key="normal" image="arrow-left"/>
+                    <connections>
+                        <action selector="didTapChat:" destination="i5M-Pr-FkT" eventType="touchUpInside" id="Q4l-OO-dGd"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -116,21 +142,28 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Grk-4v-CLc" secondAttribute="trailing" id="51b-IA-1bE"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Grk-4v-CLc" secondAttribute="bottom" id="58M-IS-ugX"/>
                 <constraint firstItem="Grk-4v-CLc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="5fw-cF-20A"/>
-                <constraint firstItem="I87-8m-hme" firstAttribute="top" secondItem="Uwm-xl-oEZ" secondAttribute="bottom" constant="12" id="BiV-7l-HhH"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="mk5-lE-iL0" secondAttribute="trailing" constant="24" id="6tt-XE-mpZ"/>
+                <constraint firstItem="mk5-lE-iL0" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="9q2-r0-lii"/>
+                <constraint firstItem="J2H-9O-12D" firstAttribute="leading" secondItem="elf-R6-Eg3" secondAttribute="trailing" constant="12" id="AmR-NN-cDA"/>
+                <constraint firstItem="I87-8m-hme" firstAttribute="top" secondItem="Uwm-xl-oEZ" secondAttribute="bottom" constant="-50" id="BiV-7l-HhH"/>
                 <constraint firstItem="foV-TZ-2vw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Clc-tH-OLT"/>
                 <constraint firstItem="pWP-b5-vES" firstAttribute="centerX" secondItem="Uwm-xl-oEZ" secondAttribute="centerX" id="E6J-Rq-rC8"/>
                 <constraint firstItem="foV-TZ-2vw" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="FbS-o4-oeM"/>
-                <constraint firstItem="Uwm-xl-oEZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Jsa-Pu-93J"/>
                 <constraint firstItem="atO-nL-8Pe" firstAttribute="top" secondItem="Uwm-xl-oEZ" secondAttribute="bottom" constant="24" id="KUx-M6-sMc"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="foV-TZ-2vw" secondAttribute="bottom" id="Mg0-1E-z3C"/>
                 <constraint firstItem="I87-8m-hme" firstAttribute="centerX" secondItem="Uwm-xl-oEZ" secondAttribute="centerX" id="Mwb-kn-lTP"/>
-                <constraint firstItem="Grk-4v-CLc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="O8E-vH-mLF"/>
+                <constraint firstItem="J2H-9O-12D" firstAttribute="centerY" secondItem="elf-R6-Eg3" secondAttribute="centerY" id="TKX-4i-wMR"/>
                 <constraint firstItem="pWP-b5-vES" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="U7u-Ep-g03"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Uwm-xl-oEZ" secondAttribute="trailing" id="WyT-Y2-hoW"/>
+                <constraint firstItem="Uwm-xl-oEZ" firstAttribute="top" secondItem="J2H-9O-12D" secondAttribute="bottom" constant="12" id="Ywa-ru-Zg7"/>
+                <constraint firstItem="elf-R6-Eg3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="dDX-a5-IAb"/>
                 <constraint firstItem="atO-nL-8Pe" firstAttribute="trailing" secondItem="Uwm-xl-oEZ" secondAttribute="trailing" constant="-24" id="grP-iU-EvX"/>
+                <constraint firstItem="Grk-4v-CLc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="qgo-xf-Rpm"/>
+                <constraint firstItem="elf-R6-Eg3" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="23" id="zfN-nI-HIE"/>
             </constraints>
             <connections>
                 <outlet property="callStatus" destination="jYW-Rj-WvQ" id="3Wo-OB-iZh"/>
+                <outlet property="callTime" destination="mk5-lE-iL0" id="ev3-cY-Hej"/>
                 <outlet property="cameraButton" destination="z6b-pa-cTX" id="lJY-RE-1aI"/>
                 <outlet property="cameraSwitch" destination="7UX-Fq-ifd" id="pyZ-BN-K0r"/>
                 <outlet property="collectionView" destination="Uwm-xl-oEZ" id="o00-OE-cA9"/>
@@ -143,15 +176,21 @@
         </view>
     </objects>
     <resources>
+        <image name="Volume Off" width="32" height="32"/>
         <image name="Volumn On" width="32" height="32"/>
+        <image name="arrow-left" width="24.5" height="27"/>
         <image name="end" width="60" height="60"/>
-        <image name="message-icon" width="45.5" height="45.5"/>
         <image name="mute" width="60" height="60"/>
         <image name="noun" width="100" height="100"/>
         <image name="noun_Switch" width="32" height="32"/>
         <image name="stopvideo" width="60" height="60"/>
+        <image name="unMute" width="60" height="60"/>
+        <image name="video" width="60" height="60"/>
         <namedColor name="AppCallingViewGrey">
             <color red="0.7686274509803922" green="0.7686274509803922" blue="0.7686274509803922" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="AppDarkGrey">
+            <color red="0.54509803921568623" green="0.57647058823529407" blue="0.64313725490196083" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
